# simple_back

./: .gitignore  README.md  pyproject.toml
simple_back/: env_sample  manage.py
simple_back/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
simple_back/accounts/migrations/: 0001_initial.py
simple_back/auth_service/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
simple_back/auth_service/migrations/: 0001_initial.py
simple_back/simple_back/: asgi.py  settings.py  urls.py  wsgi.py
simple_back/static/: index.css  profile.css
simple_back/staticfiles/: profile.css
simple_back/templates/: customer.html  customer_edit.html  index.html  provider.html  provider_edit.html
